# kitty

./: .envrc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  kitty.grammar  kitty.py  main.py  pyproject.toml
examples/: example_1.kitty
kitty/: ast.py  errors.py  lexer.py  main.py  parser.py  position.py  solver.py  symbol_table.py  token.py  types.py  validator.py
kitty/lexer/: errors.py  lexer.py
tests/: test_cast_expr.kitty  test_comment.kitty  test_for.kitty  test_for_expr.kitty  test_func_define.kitty  test_if_elif_else_expr.kitty  test_list_expr.kitty  test_var_assign.kitty  test_var_define_assign.kitty  test_while_expr.kitty
